Fully update program.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 *.vcxproj
 *.filters
 bin-int/Debug-windows-x86/MintServer/MintServer.vcxproj.FileListAbsolute.txt
+*.xml
+*.sarif
+bin-int/Debug-windows-x86/MintClient/MintClient.vcxproj.FileListAbsolute.txt
+*.pchast
